--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,35 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45"
       />
+
+   <TextView
+       android:id="@+id/name"
+       android:layout_width="200dp"
+       android:layout_height="50dp"
+       android:layout_gravity="center"
+       android:layout_marginTop="5dp"
+       android:background="#F67E65"
+       android:textColor="@color/white"
+       />
+
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="#F67E65"
+        android:textColor="@color/white"
+        />
+
     <LinearLayout
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="30dp"
     android:layout_width="match_parent"
     android:layout_height="70dp"
         android:orientation="horizontal"
         >
+
+
         <Button
             android:id="@+id/etgar"
             android:layout_width="0dp"
@@ -145,6 +168,7 @@
         android:layout_marginTop="20dp"
         />
 </LinearLayout>
+
 
 
 
