--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,24 +21,51 @@
         app:layout_constraintVertical_bias="0.45"
       />
 
-   <TextView
-       android:id="@+id/name"
-       android:layout_width="200dp"
+   <LinearLayout
+       android:layout_width="match_parent"
        android:layout_height="50dp"
+       android:orientation="horizontal"
+>
+       <Button
+           android:id="@+id/rate"
+           android:layout_width="100dp"
+           android:layout_height="match_parent"
+           android:layout_marginLeft="5dp"
+           android:background="#B500FF"
+           android:text="rate"
+           android:textColor="@color/white"
+
+
+
+           />
+
+    <TextView
+       android:id="@+id/name"
+       android:layout_width="150dp"
+       android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#F67E65"
        android:textColor="@color/white"
+       android:textSize="20dp"
+       android:gravity="center"
+        android:layout_marginLeft="16dp"
        />
 
+
+
+   </LinearLayout>
+
     <TextView
-        android:id="@+id/score"
-        android:layout_width="200dp"
+        android:id="@+id/XMLscore"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:background="#F67E65"
         android:textColor="@color/white"
+        android:textSize="20dp"
+        android:gravity="center"
         />
 
     <LinearLayout
@@ -99,6 +126,7 @@
         android:layout_marginTop="5dp"
         android:textSize="40dp"
         android:textColor="@color/white"
+        android:gravity="center"
         />
 
     <TextView
@@ -122,6 +150,7 @@
         android:textSize="40dp"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"
+        android:gravity="center"
         />
 
     <EditText
